<resources>
    <string name="app_name">Pharmacheck</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="catalog">Catalog</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="todo">TODO</string>
    <string name="til">Til</string>
    <string name="rejim">Rejim</string>
    <string name="yordam">Yordam</string>
    <string name="biz_haqimizda">Biz haqimizda</string>
    <string name="o_zbek_tili">O\'zbek tili</string>
    <string name="saqlash">Saqlash</string>
    <string name="welcome_title">XUSH KELIBSIZ!</string>
    <string name="welcome_subtitle">Biz bilan dorilarni skanerlang va\nxavfsizligini tekshiring....</string>
    <string name="search_now">Search now...</string>
    <string name="pharmacheck">Pharmacheck</string>
    <string name="kerakli_dorilarni_biz_bilan_toping">Kerakli dorilarni biz bilan toping!</string>
    <string name="ommabop_dorilar">Ommabop dorilar</string>
    <string name="see_all">See All</string>
    <string name="hozircha_ommadbop_dorilar_mavjud_emas">Hozircha ommabop dorilar\nmavjud emas</string>
    <string name="drug_farm">%1$s / %2$s</string>
    <string name="detail">Batafsil</string>
    <string name="check_drug_text">Ushbu dori bizning ma\'lumotlar bazamizda topilmadi( Bu dorini bazamizga qo’shishingiz mumkun)</string>
    <string name="orqaga">Orqaga</string>
    <string name="qo_shish">Qo\'shish</string>
    <string name="enter_drug_name">Dori nomini kiriting</string>
    <string name="thanks">Ma’lumotlar bazamizni kengaytirishda bergan yordamingiz uchun raxmat)</string>
    <string name="mavzu">Mavzu</string>
    <string name="tarkibi">Tarkibi</string>
    <string name="foydalanish_bo_yicha_ko_rsatmalar_va_dozlar">Foydalanish bo\'yicha ko\'rsatmalar va dozlar</string>
    <string name="farmakologik_xossalari">Farmakologik xossalari</string>
    <string name="ko_rsatmalar">Ko\'rsatmalar</string>
    <string name="yon_effektlar">Yon effektlar</string>
    <string name="kontrendikatsiyalar">Kontrendikatsiyalar</string>
    <string name="dozani_oshirib_yuborish">Dozani oshirib yuborish</string>
    <string name="maxsus_shartlar">Maxsus shartlar</string>
    <string name="o_zaro_ta_sirlar">O\'zaro ta\'sirlar</string>
    <string name="saqlash_shartlari">Saqlash shartlari</string>
    <string name="saqlash_muddati">Saqlash muddati</string>
    <string name="chiqarish_shakli">Chiqarish shakli</string>
    <string name="ishlab_chiqaruvchi_ma_lumot">Ishlab chiqaruvchi ma\'lumot</string>
    <string name="massa">Massa</string>
    <string name="ishlab_chiqaruvchi">Ishlab chiqaruvchi</string>
    <string name="hozircha_bu_bo_lim_mavjud_emas">Hozircha bu bo\'lim mavjud emas</string>
    <string name="saqlangan">Saqlangan</string>
    <string name="biz_bilan_bog_lanish_uchun">Biz bilan bog\'lanish uchun:</string>
    <string name="gmail">Gmail:</string>
    <string name="telefon">Telefon:</string>
    <string name="about_us_text">Pharmacheck - ijtimoiy dalillarga asoslangan holda sun’iy intellekt yordamida dorilar xavfsizlik darajasini aniqlovchi ilova. Ilovamizdan dori shtrix kodini skanerlash yoki dori nomini qidiruv bo’limiga yozish orqali doriga berilgan baholar va dori haqidagi ma’lumotlarni olishingiz mumkin. Yaqin orada dorilar haqida savollarga asosli javob bera oladigan chatbotimiz ishga tushadi. Biz sizning sog’ligingiz haqida qayg’uramiz!</string>
    <string name="bizni_ijtimoiy_tarmoqda_kuztib_borishingiz_mumkin">Bizni ijtimoiy tarmoqda kuztib borishingiz mumkin:</string>
    <string name="hozircha_saqlangan_dorilar_mavjud_emas">Hozircha saqlangan dorilar mavjud emas</string>
</resources>