<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="120dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color">

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:elevation="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/search_container_basckground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconSearch"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_search"
            app:tint="@color/dark_gray" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:background="@null"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/search_now"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/appLogoSecondary"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/app_logo_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchContainer" />

    <TextView
        android:id="@+id/pharamacheckTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="16dp"
        android:text="@string/pharmacheck"
        android:textColor="#2C2C2C"
        android:textSize="24sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogoSecondary" />

    <TextView
        android:id="@+id/pharamacheckSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="16dp"
        android:text="@string/kerakli_dorilarni_biz_bilan_toping"
        android:textColor="#8C8C8C"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pharamacheckTitle" />

    <TextView
        android:id="@+id/drugsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="16dp"
        android:text="@string/ommabop_dorilar"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pharamacheckSubtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDrugs"
        android:layout_width="0dp"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false"
        android:layout_height="0dp"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/recycler_view_drugs_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drugsText" />

    <TextView
        android:id="@+id/noDrugsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="16dp"
        android:text="@string/hozircha_ommadbop_dorilar_mavjud_emas"
        android:textAlignment="center"
        android:textColor="#8C8C8C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/recyclerViewDrugs"
        app:layout_constraintEnd_toEndOf="@id/recyclerViewDrugs"
        app:layout_constraintStart_toStartOf="@id/recyclerViewDrugs"
        app:layout_constraintTop_toTopOf="@id/recyclerViewDrugs" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#2C2C2C"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/recyclerViewDrugs"
        app:layout_constraintEnd_toEndOf="@id/recyclerViewDrugs"
        app:layout_constraintStart_toStartOf="@id/recyclerViewDrugs"
        app:layout_constraintTop_toTopOf="@id/recyclerViewDrugs" />

</androidx.constraintlayout.widget.ConstraintLayout>